styles/main.css
.score {
  width: 25%;
  margin: 3rem auto 5rem;
}

.score__container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  margin: 2rem 0;
}

@media screen and (max-width: 450px) {
  .score__container {
    margin-left: -1rem;
    margin-right: -1rem;
  }
}

.score__player, .score__computer {
  border: 2px solid var(--dark-gray);
  padding: 1rem;
}

.picks {
  margin: 3rem auto;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  width: 50%;
}

@media screen and (max-width: 650px) {
  .picks {
    -ms-flex-wrap: wrap;
        flex-wrap: wrap;
    width: 70%;
  }
  .picks__choice:last-child {
    margin: auto;
  }
}

.picks__choice button {
  cursor: pointer;
  margin: 2rem;
  width: 8rem;
  height: 8rem;
  border-radius: 50%;
  border: solid 1px var(--dark-gray);
  background-color: var(--main-background-color);
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.picks__choice button:hover {
  -webkit-transform: scale(1.1);
          transform: scale(1.1);
  -webkit-box-shadow: 0 0 2px 1px var(--dark-gray);
          box-shadow: 0 0 2px 1px var(--dark-gray);
}

.picks__choice button:active {
  -webkit-box-shadow: 0 0 2px 3px var(--light-gray);
          box-shadow: 0 0 2px 3px var(--light-gray);
}

.picks__choice button .icon {
  font-size: 2rem;
  color: var(--dark-gray);
}

.results {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  width: 80%;
  margin: 10rem auto;
}

@media screen and (max-width: 645px) {
  .results {
    -ms-flex-wrap: wrap;
        flex-wrap: wrap;
    width: 100%;
  }
  .results__player {
    -webkit-box-ordinal-group: 2;
        -ms-flex-order: 1;
            order: 1;
    -webkit-box-flex: 1;
        -ms-flex: 1 1 185px;
            flex: 1 1 185px;
  }
  .results__computer {
    -webkit-box-ordinal-group: 3;
        -ms-flex-order: 2;
            order: 2;
    -webkit-box-flex: 1;
        -ms-flex: 1 1 190px;
            flex: 1 1 190px;
  }
  .results__picks-outcome {
    -webkit-box-ordinal-group: 4;
        -ms-flex-order: 3;
            order: 3;
    margin: 5rem auto;
  }
}

.reset {
  position: fixed;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  background-color: #ffffff98;
}

.start {
  visibility: hidden;
  opacity: 0;
}

.reset__container {
  position: absolute;
  width: 50%;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
  background-color: #ffffff;
  padding: 10rem;
  border-radius: 10px;
}

@media screen and (max-width: 655px) {
  .reset__container {
    padding: 3rem;
  }
}

.reset__content h3 {
  margin: 2rem;
}

.reset__choice {
  margin-top: 5rem;
}

.reset__choice-yes {
  margin: 0 1rem;
  padding: 1rem;
  font-size: 3rem;
}

.reset__choice a {
  cursor: pointer;
  border: solid 1px var(--main-background-color);
  background-color: var(--main-background-color);
  padding: 2rem;
  border-radius: 10px;
  -webkit-transition: background-color ease-in-out 0.2s;
  transition: background-color ease-in-out 0.2s;
}

.reset__choice a:hover {
  background-color: var(--light-dark-blue);
}

.reset__fade-in {
  -webkit-animation: fadeIn linear 0.2s forwards;
          animation: fadeIn linear 0.2s forwards;
  -webkit-transition: all ease-in-out 1s;
  transition: all ease-in-out 1s;
  z-index: 98;
}

.reset__fade-out {
  -webkit-animation: fadeOut linear 0.2s forwards;
          animation: fadeOut linear 0.2s forwards;
  z-index: -1;
  -webkit-transition: all linear 0.2s;
  transition: all linear 0.2s;
}

@-webkit-keyframes fadeIn {
  100% {
    opacity: 100%;
  }
}

@keyframes fadeIn {
  100% {
    opacity: 100%;
  }
}

@-webkit-keyframes fadeOut {
  50% {
  }
  100% {
    opacity: 0;
  }
}

@keyframes fadeOut {
  50% {
  }
  100% {
    opacity: 0;
  }
}

:root {
  --main-background-color: #80c8f18c;
  --main-dark-color: #202020;
  --light-gray: #acaaaa;
  --dark-gray: #707070;
  --light-blue: #4da8da;
  --light-dark-blue: #007cc7;
}

*::before,
*::after,
* {
  margin: 0;
  padding: 0;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

html {
  font-size: 62.5%;
}

body {
  background-color: var(--main-background-color);
  text-align: center;
  font-size: 2rem;
}

h1 {
  font-size: 4rem;
  margin-top: 3rem;
}
/*# sourceMappingURL=main.css.map */

